@@ -3,10 +3,10 @@ DEPEND==dev-lang/python-2* =dev-lang/python-2*[xml]
 DESCRIPTION=Command line client for Amazon S3
 EAPI=3
 HOMEPAGE=http://s3tools.org/s3cmd
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=GPL-2
 RDEPEND==dev-lang/python-2* =dev-lang/python-2*[xml]
 SLOT=0
 SRC_URI=mirror://sourceforge/s3tools/s3cmd-1.0.1.tar.gz
 _eclasses_=distutils	77fc6005d2dfcc7bdb5ec363a49d9912	multilib	ded93e450747134a079e647d888aa80b	python	dd56675d8e9f7e85d815a28c87383141	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e
-_md5_=bf44a0adaf16ae4320dde00474c136f9
+_md5_=c3b5d1cd753a5af936d25757404c175c
