@@ -10,4 +10,4 @@ RDEPEND=app-shells/tcsh dev-libs/libxml2:2 dev-libs/libxslt mpi? ( virtual/mpi )
 SLOT=0
 SRC_URI=http://meme.nbcr.net/downloads/meme_4.8.1.tar.gz
 _eclasses_=autotools	cf83655b19ed98f9ea3b44f4572b51a3	eutils	2824df7f5dc9f47aee293af8a6b517ed	libtool	2b273eea1976cfaed3449345d94331ac	multilib	ded93e450747134a079e647d888aa80b	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python	dd56675d8e9f7e85d815a28c87383141	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=d99cd0ee8512142a44ff49bd03d51b94
+_md5_=142b4753b3b22b5abababd1976ee1e20
