@@ -3,7 +3,7 @@ DESCRIPTION=the bind library for interix
 EAPI=2
 HOMEPAGE=http://dev.gentoo.org/~mduft
 KEYWORDS=-* ~x86-interix
-LICENSE=as-is
+LICENSE=ISC BSD-4
 SLOT=0
 _eclasses_=multilib	ded93e450747134a079e647d888aa80b	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e
-_md5_=becd64dc30938e5b250eae8b7166b104
+_md5_=22f7f95aababef45342580d390f50f70
