@@ -1,18 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST s3cmd-0.9.9.91.tar.gz 51132 RMD160 31818beed635d5916149d4b354f8009089f63afd SHA1 011f552d486ad77e09a07f01c7e8903ccc787837 SHA256 3c7b5ebaaba52473c73268cb0d79e6e46111e5d1f25d73f2d2ffbfc4dc905343
-DIST s3cmd-1.0.0.tar.gz 57430 RMD160 0fe8ed3e02cf9ced03bdb2a8a562482f6430efe6 SHA1 958457f10616f9af66dcfc662a2dcd1bba5a70af SHA256 9796e313a22db863d92069ed573d131ef7e74723ec88fff901a345b3a08ce656
-DIST s3cmd-1.0.1.tar.gz 57594 RMD160 18d404e055dedc4713f4365ad1b0f92c744c0843 SHA1 89eb9974cb523e0410db735d9d9991b355d053c1 SHA256 d76826ea9c5a4789044424f1a50abe83523ba5d12a9185c7a6b7f4c86984bdce
-EBUILD s3cmd-0.9.9.91.ebuild 669 RMD160 11494389070c49857091e4c48ab4d710411dacfd SHA1 8bfff50badd120151a48110c3c3c8296fb01e418 SHA256 6488f6568112235544c5a3c562c4e7c1a0e3205812f126e3b782db92b6ad52ed
-EBUILD s3cmd-1.0.0.ebuild 705 RMD160 d4912226d16f044f825fca7d21406ae49184fae3 SHA1 3e660af8fdbbabea356a705d9e50cc5bc76c8e0d SHA256 73be04a85f7a6fa08e3b89a8418f995e741c78f02c5bb38964fac4d75860203f
-EBUILD s3cmd-1.0.1.ebuild 711 RMD160 baa74cf21f0c045f7844a4e315d994d134097a45 SHA1 5f75b72f00b04b4d9958093a84930460077d9929 SHA256 e696ea73fa884b51631f671220b9c727a3d47a0bd47ccd1e98d57a5925b0fdcb
-MISC ChangeLog 2385 RMD160 4aff6c8687009ecad450199d3263568b57a1f58a SHA1 82908355610536a7d702a499fb46206332248901 SHA256 2b034dee74cbac32b819b235c3ea7865df694e407a5a110a911f84f52c66e9a7
-MISC metadata.xml 482 RMD160 25a45dffb8bb1cb4fca4b5f77f5d9783c9ad3efc SHA1 e15881113b388c5dbca74e65b9260e41ed5b1b68 SHA256 b24088fb95cbb4af01a95ae5c3c8ac7e4cc30407ae7a40b0370d20c700fc336b
+DIST s3cmd-0.9.9.91.tar.gz 51132 SHA256 3c7b5ebaaba52473c73268cb0d79e6e46111e5d1f25d73f2d2ffbfc4dc905343
+DIST s3cmd-1.0.0.tar.gz 57430 SHA256 9796e313a22db863d92069ed573d131ef7e74723ec88fff901a345b3a08ce656
+DIST s3cmd-1.0.1.tar.gz 57594 SHA256 d76826ea9c5a4789044424f1a50abe83523ba5d12a9185c7a6b7f4c86984bdce SHA512 daddb6c49a22cb2c9196d69116abddc639ab117b8a21413068e33e76f67dff5a21d6dca9a9d385113651fa996ace2359684709b2a3be33f4404ad79ed3d44814 WHIRLPOOL d151d9581359fd8dcc23550bc45fc972ab349153e7488d8d9e28c18857e5d550e834ae16274029797a4d2a096aa988e780ad82756f4f1b2a936002667ac96186
+EBUILD s3cmd-0.9.9.91.ebuild 669 SHA256 6488f6568112235544c5a3c562c4e7c1a0e3205812f126e3b782db92b6ad52ed SHA512 491d9bc2988840597e6971b55979d6b742b0f65e57409265591c7a3a063d36d064611111a251e1ed9548e9e29028f1e40888487777076d4cf847e47ef73368ed WHIRLPOOL 2b3cf9c389f521ad0aac6510ced2d7b0c66e8d259651e67e35f1fa6b6741fadac02a3891631892f375ef312e18b7fa8e2effb8b1032373e428056feb0c037e75
+EBUILD s3cmd-1.0.0.ebuild 705 SHA256 73be04a85f7a6fa08e3b89a8418f995e741c78f02c5bb38964fac4d75860203f SHA512 639aa391a928c5bf926d98b716e3d11524c7211c41fa45d43e5b2fa3e1077af0f5a41c0df9faa6307ee6f3312b3e65bbdfb032929ae938d2577a8189be8dfb20 WHIRLPOOL e462049bbfa87c73f8d4ca9f519311ee54a499f2b90630931de062fcc01c86f7eadc3aad6dd75513836b8e9bf64c149fc3d855f3449187cd882118c27b5ef251
+EBUILD s3cmd-1.0.1.ebuild 706 SHA256 b22a9be624e6c41ab8774e11a0bdf501754655a00c92afe9d71720826d84b9f9 SHA512 24c83ab933a4eaca55a14fe69bc7caf556fde506d2ad8cad9ec67dea0b48545ae65b03d636b563528e414ae18adba01b279f13771369e47efb4a47a68bec5517 WHIRLPOOL 1515a56f8e862d6c246058a26be72e5cdcd53e614af9538de3c535cf74e379aca4fca69a745292e5b813d3161dd1401ffff90bb71a72ed4b2523ac90c2d2bc14
+MISC ChangeLog 2485 SHA256 f37106522a10ed538c0c38b4ed9eacb94d2988add84a1b91e31acbc851f8d79f SHA512 9581e75e5388519a1e8e0bcaf03b65d6443b01123588053ef3a2711df3513ebf40d312f2c596f5ac53c716ef0343439875fa9b30ff788815a6489cb894abd2db WHIRLPOOL c4e4077bacbf92da1c8bc7d2b3cf68b1c1a865e0072e612c0ebac181f00b090f2abea07b44fdc72dd84a6173699373ee0fdfe6fffebebe1cb586f486fa789937
+MISC metadata.xml 482 SHA256 b24088fb95cbb4af01a95ae5c3c8ac7e4cc30407ae7a40b0370d20c700fc336b SHA512 d36d4d9588227dff3218835c4bb94ab98f86a9ba3a9db78b7cc5103c4fb0956e086f6d8bc3069ce20726524486fda62fb022cfb01fa07ad9e6425c9ddc5fb69b WHIRLPOOL 706d0896b25c5f01b85a5eb092284de004cfb2ee5d6096b9a6e19a3262d53474e03f410c5524f0a3d3c4d59401e42f6991fb4e5c18d9e5aae4a239c5ce6886ca
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk8qa6kACgkQVxOqA9G7/aBoGgD9ErAQNJFsvg5ZzWnizqnIUaG8
-3UkvSdoe4JKTreWXiBcA/2oxv+xzUwtdxkbc3wVs7Na3MsoREuN16LmIX+P22swH
-=yOXx
+iQEcBAEBCAAGBQJROhC7AAoJEA2sAkrWKOU2OfoH/1t+KDwSI/c6r3S9/TW2GG2O
+DSHWSNrRohU70PA2HUu6tE1WChBcQwJGWgHwuZomUd6rCO45vVCOoCGffVfdMh4V
+GLORoo5PZmn6Sk8evcLMwIHB5QbfJjkSmOEkSvoTYWFF5x+Gbl65XiLhorNJcTB5
+D4rGjw55uX1MCG/l5d5FbBNeAvUeBgRDpZN+VRxn8NM15wKn338u1ILlYM/jqRm7
+fgNjOIfQaYUOZ3ZUm3n/hk2CetHRu/Hfboj7s/HyzpNI3MT/nxBNn1+fSmxk8kzC
+LE/EVGWxq45pWCcsqjOFoelc+DDpciEZWD+620saHp7jBXAaxZ9OoO9HR8QcnfI=
+=N82a
 -----END PGP SIGNATURE-----
