@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/s3cmd/s3cmd-1.0.1.ebuild,v 1.1 2012/02/02 10:55:31 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/s3cmd/s3cmd-1.0.1.ebuild,v 1.2 2013/03/08 16:23:21 nimiux Exp $
 
 EAPI="3"
 PYTHON_DEPEND="2"
@@ -8,7 +8,7 @@ PYTHON_USE_WITH="xml"
 
 inherit distutils
 
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 DESCRIPTION="Command line client for Amazon S3"
 HOMEPAGE="http://s3tools.org/s3cmd"
 SRC_URI="mirror://sourceforge/s3tools/${P}.tar.gz"
