@@ -7,13 +7,13 @@ AUX meme-3.5.4-patch2.patch 2074 SHA256 bf74f09bcd6c247f464f15b17e3a0e8f95149fdc
 AUX meme-4.0.0-Makefile.am.patch 377 SHA256 ef3f0d8ccca728325d9f9b4f485e8cd4db2ced50fc975f8b66f3b76fcf17b5e8 SHA512 87d4e552c51b45409093eeb7821dfa571b6d44dfdae4a899600da8c48bfe4806d5018d83a433cc88443d05ac6a5b4b7aa7f9abf9a027f5ce8ee7b8da7e4d7b12 WHIRLPOOL 16cc954f231868cd39be3dad5ec944a3e15c8946022a37e1a32c527237f045de70bc85e986a5a7ecadc2107992dd60859caa7f75b501eb256ebe208db89c38db
 AUX meme-4.8.1-Makefile.am.patch 4907 SHA256 a08c25df2ec74469f4586f9c11927cf775646b1cb744e72879fc24a6586a0ff0 SHA512 50c43b6e6f35e8898c073b95b1600df2c3a57bb5b9ab531fb060d3fb869d26284a081327d6624b5147a0e1209a714173540cb725dc54979b14e598ba831fd410 WHIRLPOOL 4ff6286ca9f45533996ab0d5e5554f6c77e5761c0c226f8c25c56d51270350d823e91da96a546d451dc0fc4a8df793ff29b9006b917ced149f3af5313b635cc8
 DIST meme_4.8.1.tar.gz 8703632 SHA256 c3ad3ca26bc2a7130c5eceb64e1745275c317a5469e98fc8759a9e56babccb8c SHA512 31833169ffa9bd82387d1872be40b0fc4312f4a05bb7abb84daf372244ce3f2a68c89c96722c0453f7bcd9eb4fc84fd3d66e1278af55d556715b94b0df5f87ba WHIRLPOOL 4b5e8968e6964479081d1fe036ff3aa7a50dc56bafc0031890d2e47dbdc8e0273e62ffe01800d8908b2fa9824a4766254bb0fd94003d9ca14784073d5357793e
-EBUILD meme-4.8.1-r2.ebuild 1870 SHA256 56dfc0c7e424124ff7eb6515452550e2bd80b289703d4f9f009a93a5e6234500 SHA512 cc89014303f12aa8f00f5b0df7f1957770f6d935d0daca87b4820e38ef9537cde7dab9f88ff3d3f41dc0d008e4d0d401d06e4ee08d9e2f6020d1c19b573d5495 WHIRLPOOL ae8b8caebc124a2860496cfd067dcd46a7007e2a4c744143d3c27f275e688bc232ee334e2570cba388d1da32e80abc88e323f82dedcd226a6e6b1e861cb0fd5b
-MISC ChangeLog 3783 SHA256 b6f8539874a3be1e392575991d6cf0a2319fdaf956b87be80c7ca685c305e53b SHA512 703c9d101311609c3bca741449fd640b61f962a7a97b0f387f559086a7e6a8f979e93f563e038660452f264649aa7ed51565477ee8d72b3c1f129f97f403ccc1 WHIRLPOOL 685fecaaef7bd75fa4a97f116e88b26c094cd97e21b95e3ee440ecd260719d0a44d00b864ca644d5fa828d75b8ab39211b1ceda7d7fadf2571388be7cc2d7b01
+EBUILD meme-4.8.1-r2.ebuild 1873 SHA256 1be08e83c0aa025cf612c949c887e7aca7c67fb58f68506f6ba2484234181d7d SHA512 e1c91cb0bfbbcd0815d521979d068b7ef263a91d613ff3df88eef65e97c65eccaea7a3a9a8b25633fe62ec169b20ceee2772f8417d844040c2fc484eacd769be WHIRLPOOL e145b1ac4d3486ccd799ac81087740a82ca62d63e7f4982982f4ba1f3a92e442f2e2b02d0a384580e0fc5dfb88b0c247ce3f3c3c3db43dc195406f247df645a0
+MISC ChangeLog 3884 SHA256 dbc81446cc20f1d5b038bc4bdfd85f7d8acd09bbc7f50d4bf8c5169d6d5b223c SHA512 4426e74eba5f8f10b61d30c8d3779c8add2a21944a44bb37c34a0674a36aa8beb7109697f2afdfe62f2e6e16da09ab7a127e4b32ce45d18e659e8e813e2fbe30 WHIRLPOOL 7ddc3e19335bcaba7dda2834186eb3460f1401acc97d6630f2c8500d7de0868ed799402a51fc80daa9ffb1b5d387a78930f0e476010e52e9b9774b328486e880
 MISC metadata.xml 266 SHA256 98c7d1da8a728a1f1d796a79d51f25e4164e24048ec1aacbbf0ae2ffb171ff35 SHA512 879cdcca092d4c82b8c63672c91e08e7b01e81419d2c7c7b766de96ba2a32dd1e21c18968ed7172eec8604f52c92b19a31773f428bce9461d9b8190384680194 WHIRLPOOL 0f46288ab7090ad3da5b31816792427e4ad1a950e39a503bb406ebe8789cffedd9c85b46bfbf040fffb8aad443f512c28716a0a6436d0c06309155277060cdcd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEwoosACgkQgAnW8HDreRb1fgCgiKfZjyXGfxjRMGRuTngxwyGX
-3ecAoMSBbOispbkIY/41SMvpNZQvWxh8
-=4mYY
+iEYEAREIAAYFAlE6D/IACgkQgAnW8HDreRb3mwCfSjxP7C2dUpNfkXg3irhloV7W
+xCAAn39rFdpJX8jmMFlebzQCELRJABQ1
+=E0qW
 -----END PGP SIGNATURE-----
