@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX weak.s 6060 RMD160 e18a7d0d87918b095b8b6d9c7e5e814da49d33a1 SHA1 f080e5b71af214b93946c4721d5c172819f087cd SHA256 6ba259ee9e1667d16dc705160fd30fc39892ad8a7dd03da37208113c298e19fd
-EBUILD itx-bind-0.1-r2.ebuild 2897 RMD160 c8462034472e6dad15610650eb3dc80a29b9524f SHA1 e6ca81f832c84c1445fb12c2b5d62295b380eacf SHA256 fa7afae6023fdfa5a1e6468643d33bd410cda15fa592cb66c5a6940bc18d9dc8
-MISC ChangeLog 677 RMD160 b35f11ba43db9bf0b9ef1cfb6f2e265cf5b66c71 SHA1 8bff5c5659faf93f08ab70d2fd52a8091ed722e6 SHA256 ee373c0fc9560b7d11fbf4790d807bd50f94b05108aa10fa968b8ebf29c51353
-MISC metadata.xml 516 RMD160 7a2ae54e7e5db167482338d6f2ebb605584ad772 SHA1 9170ab05d56bcb5c88ffec06a849a8674c343b9c SHA256 ff8f9d372b95fa03debf599d4189da5708ca7f4f285056552fb41ab074f2014a
+AUX weak.s 6060 SHA256 6ba259ee9e1667d16dc705160fd30fc39892ad8a7dd03da37208113c298e19fd SHA512 e8d3336429d6ecd7d2b662a497bbd7cf8a3de42f5ca60448450d77ab544b1cddebc9ded39288cd71c069cb6940e4ecb99431ca03baa326d2fa888d0a1fba0bfc WHIRLPOOL 1ca1ba35ca14b61f7b2d302ef358b6f5927186d17fb4272e8af92c7b6916cb2af46b35984162160f8bc51a130a3105e7ee9e3d2858f69f72963877bc48cbb30d
+EBUILD itx-bind-0.1-r2.ebuild 2901 SHA256 43f7b6ee334259c444a77576620cd22f109d6b11c3f26d44cad20acdf19b0a47 SHA512 03b0f0d10836461aafca4fc2571d8db2c44f3303bfc48392412c117007ea17aae30000c8d9cfc6b4cb2f47d3f7a3498a79c997c8723102f7a9a8e791b3521fbe WHIRLPOOL 2041b8ceac76d6136b35ff75872d5ef8ace3245e1e821da1ef1d274355b2bec9bded788c2450f3fa5c56b250762fcde35fe12c0443ae28b39c047ee6ba4c7b0a
+MISC ChangeLog 785 SHA256 c707e41e2bb35324ce5087b72f0c568398ceaebd366076892ad01084a2b5fe46 SHA512 2c522bc2eb3a9a940ede7c6e91f61cc57b66545bdea74499e43bcde5b637a7012f8668253db78436f452c7c7685889c32079f52f5686974b92054736f5b092b4 WHIRLPOOL fb153b96a7a58835e9a0fb41e5e195d7f21ffdb0027828870d87a6165701782e83a90de2940a833204f1e462d1a5e646a7e35524c31bcf8de3de7e7860d63b29
+MISC metadata.xml 516 SHA256 ff8f9d372b95fa03debf599d4189da5708ca7f4f285056552fb41ab074f2014a SHA512 393266ce426eb34f45d0bc2d084f81960ebeb14f32769cddbcd685b8c4aca27cc86d4542a528568f30c82c0564f2554b6d5bf77dad6bcb5cfb321c43613fab26 WHIRLPOOL dfa937c9e5d02e322c69f5cec637ea7f19bdc2dadd3ca81d70d3fd476cbad2553d0349387788eac551978bef54d2a07ee503b42868c15e30608016d9d5cb376e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+L304ACgkQLc0TWKYwzLhDOgCgrEwHVFykTE8KVcylqW3e84sZ
-aL0An2tJD7mgw47NurvW6nim6K9vpW8h
-=k166
+iEYEAREIAAYFAlE6DEUACgkQLc0TWKYwzLh1QgCgieOSkRvt+r7zI5O9XH7RjvFO
+Ya8AnRwzz7WuTiKY3RcGNFy+SmHqMrNc
+=EWRR
 -----END PGP SIGNATURE-----
