@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/itx-bind
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/itx-bind/ChangeLog,v 1.2 2012/04/16 08:58:49 haubi Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/itx-bind/ChangeLog,v 1.3 2013/03/08 16:05:21 haubi Exp $
+
+  08 Mar 2013; Michael Haubenwallner <haubi@gentoo.org> itx-bind-0.1-r2.ebuild:
+  Fix LICENSE, bug#441826.
 
   16 Apr 2012; Michael Haubenwallner <haubi@gentoo.org> metadata.xml:
   add myself as co-maintainer
