@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/s3cmd
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/s3cmd/ChangeLog,v 1.17 2012/02/02 10:55:31 titanofold Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/s3cmd/ChangeLog,v 1.18 2013/03/08 16:23:21 nimiux Exp $
+
+  08 Mar 2013; Chema Alonso <nimiux@gentoo.org> s3cmd-1.0.1.ebuild:
+  Stable for amd64 wrt bug #460766
 
 *s3cmd-1.0.1 (02 Feb 2012)
 
